@@ -1,3 +1,9 @@
+2004-08-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_focus): Support the latest
+	EWMH additions to the _NET_ACTIVE_WINDOW client message 
+	format.  (#150668, Elijah Newren)
+
 Mon Aug 23 01:17:59 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gdk/gdkrgb.c (gdk_rgb_xpixel_from_rgb_internal): Set unused
